umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_all-possible-atoms-properties.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 38, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 38, col 0"
extended_molecule:
  success: false
  error:
    error_type: InvalidIsotopeMass
    message: Invalid isotope mass 3 for element F
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C9FNO
    atom_count: 12
    bond_count: 13
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
